updated at: 2023-04-25 20:20, 魔剣「七光」 - 緑紫ノ七草粥 - BOOTH

--- a/VRChat/34/1003634.html
+++ b/VRChat/34/1003634.html
@@ -95,9 +95,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Licq4DSYPfy2ScXMq7zb7GVdZLvUP1MKbOaly7WqJlQ="></script>
+    "8U/+zyAwXsY2XntXUvNFAMnexxIIvrOGDvX9zcyNw50="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔剣「七光」","description":"・ファンタジックな大剣モデルです。","url":"https://booth.pm/ja/items/1003634","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/97c114c0-fba8-44bb-94b5-aaa1efd40633/i/1003634/108ebc04-72b4-4b4a-bf31-dbaff75bcc3a_base_resized.jpg"}
     </script>
@@ -108,7 +108,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Licq4DSYPfy2ScXMq7zb7GVdZLvUP1MKbOaly7WqJlQ="></script>
+    nonce="8U/+zyAwXsY2XntXUvNFAMnexxIIvrOGDvX9zcyNw50="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -132,6 +132,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1003634/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1003634/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
