--- a/VRChat/06/1003906.html
+++ b/VRChat/06/1003906.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2zyZuC0N5uKp5F5KrWwnlJqvVdnlB6NlF5kqnBY+RZs="></script>
+    "5eOyQL/nneCFi8jyCEml2grvqkGzTR/JXUryA3JZN2k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル「エビフライ＆エビぐるみ」","description":"3Dモデル「エビフライ＆エビぐるみ」\nポリゴン数はエビフライが1254、エビぐるみが2342です。\nVRChatで使う場合エビフライはアニメーションオーバーライドで出すことになると思うので問題ないと思いますが、エビぐるみは2万ポリゴンオーバーに気をつけてください。\nもっとも、着ぐるみを着る以上もとの服はいらないので、服を削除すれば比較的楽に2342ポリゴン削減できると思います。\n詳しい編集方法はブログ記事をご覧ください。\nhttps://bironist.hatenablog.com/entry/2018/09/06/202829","url":"https://booth.pm/ja/items/1003906","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/d9b60374-3610-4f75-b074-c7d96f64e6f0/i/1003906/f6e766e9-d01b-456f-9e83-cc993461f3a9_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2zyZuC0N5uKp5F5KrWwnlJqvVdnlB6NlF5kqnBY+RZs="></script>
+    nonce="5eOyQL/nneCFi8jyCEml2grvqkGzTR/JXUryA3JZN2k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1003906/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               236
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1003906/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               236
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
