--- a/VRChat/49/1003149.html
+++ b/VRChat/49/1003149.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aEolpvV9x6NFAc9VN15/JFdVfWzjT59x2IGo7GOE4iE="></script>
+    "yy8Q9fzWk9y34MS7uDjNORKfir5ufAw1pkYi4EV7eAo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"高周波ブレード \"HFS-1 AusfA-C FALKE\" 【オリジナル3Dモデル】","description":"【説明】\nVRChatでの使用を想定したオリジナル3Dモデル\nその他ゲームや動画等でも使用可能\n\n制作者:Tokunaga_ac\n\n\n同梱のunity packageはマテリアル、トレイル等セットアップ済み\n\n\n\n【内容物】\n\n■トレイル用テクスチャ\nTrail_ver1.psd\n　※↑こちらのテクスチャは下記の利用規約にとらわれないものとします。ご自由にお使いください。\n\n■Unity package\nHTS1AusfABC.unitypackage\n\n■フォルダ\nHTS1AusfABC\n　unitypackageに含まれているFBX、テクスチャデータ\n\n\n◆◇◆【利用規約】◆◇◆\n\nhttps://docs.google.com/document/d/1L3RhJVXeK9gEyJG3I2trR6v0SWS8bVYIy4ju1dvHKwY/edit?usp=sharing\n\n\n\n\n\n【連絡先】\n\nTwitter:Tokunaga_ac\nDiscord:Tokunaga_ac#3200\nEmail  :atelieralca01@gmail.com","url":"https://booth.pm/ja/items/1003149","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/6ac10b7b-256b-4e3b-b6d6-61437066f561/i/1003149/c0bc6994-e989-43c1-93ca-409974da41dd_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aEolpvV9x6NFAc9VN15/JFdVfWzjT59x2IGo7GOE4iE="></script>
+    nonce="yy8Q9fzWk9y34MS7uDjNORKfir5ufAw1pkYi4EV7eAo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -176,7 +176,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1003149/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               504
@@ -191,14 +191,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1003149/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               504
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
