--- a/VRChat/74/1002974.html
+++ b/VRChat/74/1002974.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "w1kj46RA2M6t30fpQ+O1sDiOmlMU/AG2Dr6zqb1roX0="></script>
+    "nhQ4+FYVGA79SdinBGhC/4qSVysiuJCSAsVOeVmUEAQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】オリジナル3Dモデル「アサルトフレーム001:テトラ」","description":"アサルトフレーム001：砲撃機「テトラ」\n\n試しに売ってみる事にしました\nVRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル\n「四角い砲撃機」と言うイメージで作り始めたからテトラ\nコトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています\n\n2018/12/31\nアップデートしました\n\n2020/01/28\nふぃぎゅあばたー参加モデルになりました","url":"https://booth.pm/ja/items/1002974","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1002974/6724c624-129e-44e3-9d57-d650a8639477_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="w1kj46RA2M6t30fpQ+O1sDiOmlMU/AG2Dr6zqb1roX0="></script>
+    nonce="nhQ4+FYVGA79SdinBGhC/4qSVysiuJCSAsVOeVmUEAQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1002974/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1002974/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
