--- a/VRChat/25/1002225.html
+++ b/VRChat/25/1002225.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eRjIzkazB3vU/MXcinyHCP+cANLoV6aBBDIwTtxoI50="></script>
+    "qyR7jKtna5km3Ny36mToo9O22+TwMWJE30usxvpKKQ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"EasyToTakeSSシェーダー","description":"VRChatでスクリーンショット(SS)を撮る際に画面に貼りつくことで綺麗に撮影できるようになるシェーダーです。\n名刺やワールドで生成したテクスチャなどを持ち帰る際に使えると思います。\n\n紹介ツイート・使用例↓\nhttps://twitter.com/gatosyocora/status/1036778026485276673\n(商品紹介の画像や紹介ツイートに写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)や名刺のテクスチャは同封しておりません)\n使用例として名刺とQRコードをPrefabにして同封しました。\n\n設定可能なパラメータは以下の通りです。\n・Cull : 表面、裏面を描画するかの設定\n・Front Texture : 表面に表示されるテクスチャ\n・Back Texture : 裏面に表示されるテクスチャ\n・Scale : 貼りついた際の大きさ\n・OffsetX : 貼りついた際の横方向の位置\n・OffsetY : 貼りついた際の縦方向の位置\n・Cling Distance : 画面に貼りつく範囲\n\n商用利用、改変はしていただいて大丈夫です。\nただ配布に関しては無改変での配布は禁止とします。\n改変の基準は処理負荷が減るものまたは新機能の追加レベルのものとします。\n(変数名の変更など処理が大幅に変更されないものは改変に含まれません)\n改変したものを配布する際には不特定多数がダウンロードして利用できるような配布方法は禁止です。\n\n上記のような配布制限をかけている理由は視界ジャックの悪用は良くないので下手に広まってほしくないってだけです。\n\n〇免責事項\n本製品を使って発生した問題に対してはgatosyocoraは一切の責任を負いません。\n\nBoostもしていただけるとすごく嬉しいです。\n\n2019/8/1\n・BatchingやProjectorの影響を受けないように\n・UIまわりを変更","url":"https://booth.pm/ja/items/1002225","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1002225/b70c23fd-48a4-4aa3-afba-2e38e6dca4dc_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eRjIzkazB3vU/MXcinyHCP+cANLoV6aBBDIwTtxoI50="></script>
+    nonce="qyR7jKtna5km3Ny36mToo9O22+TwMWJE30usxvpKKQ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1002225/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               290
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1002225/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               290
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
