updated at: 2023-04-25 20:21, 【YK&#39;s Atelier】ネクタイ - YK&#39;s Atelier - BOOTH

--- a/VRChat/80/1002180.html
+++ b/VRChat/80/1002180.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "espFaD8GcuboLV0TxfmCrHh3v4p/wM3QBzz8W/F5GtA="></script>
+    "E5HspY+JT0Ded6nGZsoMF4sb0W12IjGsaK2RV9Tkpjo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】ネクタイ","description":"ネクタイ！つけるだけで可愛さもあがる、カッコよさも上がる！\n自作アバターのパーツとしてもご利用いただけます！\nお持ちのアバターにそのままだとぴったり合わない場合もありますので、調節はご自身でお願いいたします。\n\nVRChatアバターへの装飾を想定して作られております。\n\n収益化された動画への出演、映り込みなどOKです。\n\n色の変更は可能です。ご自分のお好きな色にカスタムしてください。\nテクスチャはPSDファイルで保存されております。\nレイヤーが分けられているので、色変更はやりやすいと思います。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：YKネクタイ.fbx\n　　　　YKネクタイ.psd\n\nモデルポリゴン数：516△\n\nマテリアル：1つ\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/1002180","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/1002180/11815664-bc46-435c-999e-d240d56cfcb5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="espFaD8GcuboLV0TxfmCrHh3v4p/wM3QBzz8W/F5GtA="></script>
+    nonce="E5HspY+JT0Ded6nGZsoMF4sb0W12IjGsaK2RV9Tkpjo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1002180/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1002180/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
