updated at: 2023-04-25 20:21, 3Dモデル　頭部装着用小型センサーユニット - 麻婆弾ストア - BOOTH

--- a/VRChat/22/1002122.html
+++ b/VRChat/22/1002122.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "U3Dx4TORFybx1i6X3+H5+JqpULMOgtvBf+ykwRot8MA="></script>
+    "k5hvLih+8qo4+qJ+3r0z1eb2eKjSOqaotjbXcyuR56Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　頭部装着用小型センサーユニット","description":"\n\n□頭部装着用小型センサーユニットの3Dモデルです。\n268△ポリゴン。\nアバターへの組み込み等へどうぞ。\n(画像三枚目が使用例です。)\n\n\n□内容\n・mk4s.fbx　本体\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータを各種ソフトにインポートしてご利用下さい。\ntexフォルダ内にはunity等でemission(発光)に利用できるテクスチャも同梱済みです。\nset01em.pngをマテリアル内のEmissionに指定してご利用ください。\n\n\n□利用規約\n\n配布行為そのものを目的とした再配布を禁じます。\n(自作のモデルの一部に組み込む等の場合は可)\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/1002122","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1002122/ab745911-364d-4be3-b89c-2cdb9a730e2f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U3Dx4TORFybx1i6X3+H5+JqpULMOgtvBf+ykwRot8MA="></script>
+    nonce="k5hvLih+8qo4+qJ+3r0z1eb2eKjSOqaotjbXcyuR56Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1002122/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1002122/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
