--- a/VRChat/05/1001605.html
+++ b/VRChat/05/1001605.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sixolz2cTWiIo6gkgeH11ri6m/nRtExZ5iiWFASad/I="></script>
+    "UhxbjMfD95jo7Sb2WpNQ2cZy6Az4+Dq8cHN7xi41lsk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"さとかぜ夏祭り特別仕様　飲み物三種セット","description":"2018年8月29日、VRChat内で行われたイベント「さとかぜ夏祭り」にてワールドに置かれていた飲み物三種のセットです。\n※ラムネに感してのみ若干の修正が入っているため見た目にほんのり相違があります。\n\n自作のワールドに配置してみる、飲み会イベントに持参するなど、ご自由にお使いいただけます。\n\n\n－－－－－－－－－－－－－－－－－－－－－－－－\nこの飲み物はバーチャル御庭ん番youtuberである「さとかぜ」、その飼主である「宮丘風郷」殿の許可をいただき制作・販売しています。\n\nさとかぜ[バーチャル御庭ん番]のチャンネルにご登録いただけますと彼の励みになります故、こちらもどうぞよろしくお願いいたします。\nhttps://www.youtube.com/channel/UCFhFFh2ymODh2z9MI8hke3w\n\nまた、会場で流れていた「さとかぜ音頭」についても販売されています！こちらも応援してあげてね！\nhttps://satokazebooth.booth.pm/items/1006573\n－－－－－－－－－－－－－－－－－－－－－－－－\n\n\n※「お茶」と「ビール」の名前が逆になっていますが、名前だけで内容に問題はありません。ややこしいことをお詫び申し上げますm(_ _)m\n\n\n\n\n\n\n\n","url":"https://booth.pm/ja/items/1001605","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1001605/1c7ed0fd-badd-4665-ae24-4f62f5a041df_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sixolz2cTWiIo6gkgeH11ri6m/nRtExZ5iiWFASad/I="></script>
+    nonce="UhxbjMfD95jo7Sb2WpNQ2cZy6Az4+Dq8cHN7xi41lsk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1001605/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1001605/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
