updated at: 2023-04-25 20:22, りょうさん型ケイロカミオカカスタムテクスチャ - Miyakon Custom Factory - BOOTH

--- a/VRChat/99/1001199.html
+++ b/VRChat/99/1001199.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/WEkSmZgUu/v62fglWzC2xCIGTVeAGX+lV0cOBvWe5c="></script>
+    "DvnpinaZbsvgszvCJZm5YLMyG8gAQ44rqxnEq4bX6q0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"りょうさん型ケイロカミオカカスタムテクスチャ","description":"【製品内容】\n・テクスチャ\n\n【説明】\nシアトルからやってきた例の奴が登場だ！\nこのカスタムテクスチャでお友達のケイロカミオカと差をつけよう！高品質ケイロカミオカですべてを薙ぎ払え！三色セットで配布開始！！！\n\nというかテクスチャってカテゴリ何に入れればいいんだ？イラスト素材？３Dモデル？わからん\n\n\n\n【免責事項】\n当テクスチャを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【利用規約】\n既存のKeiroKamioka(MassProduction)りょうさん型ケイロカミオカモデル内のAbout.txt準拠とする\n","url":"https://booth.pm/ja/items/1001199","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1001199/89c63e20-dba9-47c9-a4bb-6cf5ba5bcfd8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/WEkSmZgUu/v62fglWzC2xCIGTVeAGX+lV0cOBvWe5c="></script>
+    nonce="DvnpinaZbsvgszvCJZm5YLMyG8gAQ44rqxnEq4bX6q0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1001199/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1001199/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
