--- a/VRChat/34/1000934.html
+++ b/VRChat/34/1000934.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vkibXPK0G9YDw+F7skexfZXgkVksRj+L5cdGh43VjHo="></script>
+    "Z18VU40NvBM7uKn9LscmOfbfR2o92CgiAiCGWSgZJdA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"大鎌","description":"自分用に作成した武器なので、無料で配布させて頂きます。\nアニメーション等は入っていませんが、使いたいという方が居ればどうぞお使いください。\n\nモデル作成に際して、みに様（ Twitter ID: @Mini_9321_VR )のまんまるしぇーだーver1.2を一部使用させて頂いています。\n\n※2019/09/18追記 配布データ内に、UnityPackageが含まれていなかったものを修正、追加しました。今までダウンロードされた方には、大変ご迷惑をお掛けいたしました。\n今回の修正により、モデルに充てるシェーダーとしてarktoon shaderを使用させていただいています。当初の記述であったまんまるシェーダーではないため、ご注意ください。\n\n\n仕様\n・ポリゴン数　△5776\n\n・メッシュ毎に基本テクスチャ1枚ずつ（計4枚）同梱。\n\n・Unity Package、FBXファイル、テクスチャ4枚、read meが入っています。\n\n\n以下、read meより転記。\n\n\n利用規約\n当モデルは、Aliciaが作成した鎌状の3Dオブジェクトです。\nVRChatやMMD等、ご自由にお使いください。\n\n・個人利用、商用利用自由。（商用利用される場合、把握しておきたいのでよろしければご一報ください）\n\n・テクスチャ、メッシュデータ等の改変利用自由。\n\n\n禁止事項\n\n・有償、無償を問わず、当モデルを二次配布する事。\n\n・当モデルの製作者であると騙る事。\n\n\n当モデルの使用によって生じるいかなる損害に対して、当方は一切責任を負いません。\n\n何かご連絡、ご質問等がございましたら、以下のアドレスまでお願いします。\n\nGmail : alicia.wlcreation@gmail.com\nTwitter : @Alicia_wlcreate\n","url":"https://booth.pm/ja/items/1000934","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5043ac6d-805c-41e4-baa7-1837025294e9/i/1000934/bb67d3c0-f782-4749-85ba-e9046ac611aa_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vkibXPK0G9YDw+F7skexfZXgkVksRj+L5cdGh43VjHo="></script>
+    nonce="Z18VU40NvBM7uKn9LscmOfbfR2o92CgiAiCGWSgZJdA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1000934/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1815
+                              1817
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1000934/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1815
+                              1817
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
