--- a/VRChat/01/1000801.html
+++ b/VRChat/01/1000801.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CUA9pIFCt0XH6GcA1F1tfmMpwlWykgiC3BgF7mvECZE="></script>
+    "InNl1LrRYZbhqPmbP21a+TBtYHnOPbajC6tWIEuCHuE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"釘バット","description":"VRC想定の釘バットです。\nポリゴン数1722。\nご自由に使用、改変などしてください。\nただし、再配布は禁止とさせていただきます。\n\n改善点、ご要望などはメッセージにて","url":"https://booth.pm/ja/items/1000801","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b5c4a06f-dddd-4906-9857-1cee9aecdc33/i/1000801/5738d3c5-f497-4cbc-a751-1000f0671718_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CUA9pIFCt0XH6GcA1F1tfmMpwlWykgiC3BgF7mvECZE="></script>
+    nonce="InNl1LrRYZbhqPmbP21a+TBtYHnOPbajC6tWIEuCHuE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1000801/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               183
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1000801/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               183
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
