updated at: 2023-04-25 20:23, ねこじゃらし Cat toy - ちま屋 -Chimaya- - BOOTH

--- a/VRChat/04/990104.html
+++ b/VRChat/04/990104.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DPV7DICb4xFSW4tTNlUUSd7UJ9pj+upz9H1P7XOarjc="></script>
+    "l4ocfTDv1McpzL3SAOlbIJRyBVBW2bhT6mhYgJ9w51o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ねこじゃらし Cat toy","description":"\nVRChat使用想定、Dynamic Bone対応　「ねこじゃらし」\n\n224ポリゴン\n\n\nアバターに持たせて揺らせば、先端のフワフワがフリフリ揺れます。\n着せ替えテクスチャ5種類入り！お好みのカラーを選べます。\nカラーそれぞれのprefab設定済み。\n\nフレンドさんと遊んだり、初めて会った人との会話のきっかけ作りなどに使っていただけるかなと思います♪\n\nファーシェーダーは使っていません。テクスチャで表現しています。\n\n※Dynamic Boneお持ちの方推奨。\n\nシェーダーはUnlitWFを使っています。prefabでcutout等の設定済みですので、なるべく同じシェーダーを使用されることをお勧めします。\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite/releases\n\n\n＜アップデート＞\n2020. 4.15　カラーごとのprefabを作ったunitypackageを追加しました。シェーダーをUnlitWFに変更しました。\n2019.03.07　ボーン、オブジェクトの変更をしました。\n","url":"https://booth.pm/ja/items/990104","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/990104/7bedfdae-fdbe-481b-ae34-4f207df572a9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DPV7DICb4xFSW4tTNlUUSd7UJ9pj+upz9H1P7XOarjc="></script>
+    nonce="l4ocfTDv1McpzL3SAOlbIJRyBVBW2bhT6mhYgJ9w51o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/990104/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/990104/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
