updated at: 2023-04-25 20:23, オリジナル３Dモデル「アンデルテ」 - ヒノイチ工房 ２号店 - BOOTH

--- a/VRChat/01/999401.html
+++ b/VRChat/01/999401.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CHqLBWzlA2U4nPhHUkcix1EJovWjgj6YC16c2NriM2Y="></script>
+    "8DyZLCrPzqfHkv1R9GMwGkYoEWO+NjoZQ3fSfBp8c0E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「アンデルテ」","description":"VRChat対応オリジナル３Dモデル「アンデルテ」\n\n制作者：ヒノイチ、ホリ\n\nUnityのHumanoid形式に対応したオリジナル３Dモデル「アンデルテ」お嬢様です。\nVRChat用に調整しましたが、ゲーム制作、動画作成or配信、静画用にもご利用いただけます。\n\n","url":"https://booth.pm/ja/items/999401","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/e06fb5c9-5f24-44bc-b61a-db9203ca2fc9/i/999401/3ffe988d-cba9-46b1-a98d-0358278888b5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CHqLBWzlA2U4nPhHUkcix1EJovWjgj6YC16c2NriM2Y="></script>
+    nonce="8DyZLCrPzqfHkv1R9GMwGkYoEWO+NjoZQ3fSfBp8c0E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/999401/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              652
+                              653
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/999401/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              652
+                              653
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
