updated at: 2023-04-25 20:24, 一眼同田貫【VRChat対応】 - 青えんじ鍛冶屋 - BOOTH

--- a/VRChat/36/998836.html
+++ b/VRChat/36/998836.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bj//5alWncIgoz/36NUSCW5rmafO8pswXpmeat1QVFg="></script>
+    "YUxqgp7M37FXWdXs8/485mDp5m88DVhAoaT+9Oxm/yo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"一眼同田貫【VRChat対応】","description":"フルスクラッチの日本刀「一眼同田貫」です\n同封のパーティクルを設定することで、刀身から紅葉を散らすことができます\n\nポリゴン数：1614△\n(鞘656△+刀身058△)\n\nVRChatでの使用を想定しています","url":"https://booth.pm/ja/items/998836","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b3455261-78a7-4395-ad3c-ee3028c2242e/i/998836/3525c9a9-1c2a-49f9-8573-21094ec42b2d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bj//5alWncIgoz/36NUSCW5rmafO8pswXpmeat1QVFg="></script>
+    nonce="YUxqgp7M37FXWdXs8/485mDp5m88DVhAoaT+9Oxm/yo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/998836/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/998836/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
