updated at: 2023-04-25 20:26, オリジナル３Dモデル「サクラ」ver2.0 - SALT_FORGE - BOOTH

--- a/VRChat/01/996701.html
+++ b/VRChat/01/996701.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "H0KlSdmZbQLLWMLbXUF/pD1AIknXfVvuN9bkmalOOzE="></script>
+    "el8oX+jxkFXv+L8y5WnMXned0O+MIC2lEDqL+CiOW5k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「サクラ」ver2.0","description":"【オリジナル3Dモデル】サクラver2.0\n\n※以下にモデルについての説明、利用規約が記載されておりますので、\nご購入の前に必ずお読みいただき、ご了承された上でのご購入をお願いいたします。\n\n※UnityChanToonShader2.0.7及びVRCSDKの導入を前提としています\n\n※VRChat向けの設定をしておりますが、MMD等他ソフトでのご利用は規約に則っていただければ自由です。","url":"https://booth.pm/ja/items/996701","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/14c30b18-ada7-419a-b270-98f26f55fb00/i/996701/a4173c16-d375-407f-b7a4-150ccf4d0afc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="H0KlSdmZbQLLWMLbXUF/pD1AIknXfVvuN9bkmalOOzE="></script>
+    nonce="el8oX+jxkFXv+L8y5WnMXned0O+MIC2lEDqL+CiOW5k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/996701/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               232
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/996701/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               232
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
