updated at: 2023-04-25 20:27, 電子ペン - SAN_KAKU店 - BOOTH

--- a/VRChat/97/995097.html
+++ b/VRChat/97/995097.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OcPjZHfDUbRwta7Ig6GZ1mkczFOgP45V+TTucXGaZ+w="></script>
+    "wPeEyclmvG8LFXY9QXfCiV8xeH/aQ+QyAQwVb+8HKDE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"電子ペン","description":"【説明文】\nVRChatでの利用を目的として生み出された3Dモデル。\n電子ペンのようなもの。\n\n△ポリゴン数　1,386\n\n【付属品】\nunitypackageデータ\nfbxデータ\ntextureデータ\n\n【利用規約】\nご自由にどうぞ。\n\n【免責事項】\nこのデータを使用して発生したいかなる問題、損害にも当方は責任を持ちません。\nご使用は自己責任でお願いします。\n","url":"https://booth.pm/ja/items/995097","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fceb67cb-cfe3-44f3-9d8b-1d494d77a478/i/995097/f8a639a0-0b09-409b-abbf-e0c19d45e805_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OcPjZHfDUbRwta7Ig6GZ1mkczFOgP45V+TTucXGaZ+w="></script>
+    nonce="wPeEyclmvG8LFXY9QXfCiV8xeH/aQ+QyAQwVb+8HKDE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/995097/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/995097/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
